<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_user_in_group"
        android:title="@string/add_user"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/delete_user_in_group"
        android:title="@string/delete_user"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/add_subgroup"
        android:title="@string/add_subgroup"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/delete_group"
        android:title="@string/delete_group"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/change_admin"
        android:title="@string/change_admin"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/voited"
        android:title="@string/voiting_group"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/edit_group"
        android:title="@string/edit_group"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/exit_group"
        android:title="@string/exit_the_group"
        app:showAsAction="never"
        />

</menu>