<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/add_group_linear"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EditProfileController">

        <ImageView
            android:id="@+id/add_group_image"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/add_title_group_text_view"
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/add_title_group_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_title"
            android:layout_marginTop="6dp"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <TextView
            android:id="@+id/add_description_group_text_view"
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/add_description_group_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_description"
            android:layout_marginTop="6dp"
            android:inputType="textMultiLine"
            android:lines="4"
            android:scrollbars="vertical"/>

        <Button
            android:id="@+id/create_group_button"
            android:text="@string/create"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>