<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <EditText
                        android:id="@+id/registration_login"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edit_text_style"
                        android:gravity="center"
                        android:hint="Login"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:inputType="phone|number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginBottom="16dp"/>


                    <EditText
                        android:id="@+id/registration_password"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edit_text_style"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="16dp"/>

                <EditText
                    android:id="@+id/registration_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_style"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    android:id="@+id/registration_surname"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_style"
                    android:gravity="center"
                    android:hint="@string/surname"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/registration_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/gradient_main"
                    android:text="@string/registration"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progressBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_black"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@mipmap/ic_launcher"
            android:theme="@android:style/Widget.ProgressBar.Large.Inverse"
            android:visibility="visible" />
    </RelativeLayout>

</FrameLayout>