<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/edit_info_profile_linear"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".EditProfileController"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view2"
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    app:cardCornerRadius="120dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/edit_info_profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:scaleType="centerCrop">

                    </ImageView>

                </androidx.cardview.widget.CardView>

            </FrameLayout>

            <TextView
                android:id="@+id/title_edit_info_profile_text_view"
                android:text="Name:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="18dp"/>

            <EditText
                android:id="@+id/title_edit_info_profile_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_name"
                android:layout_marginTop="3dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorGray"
                android:inputType="textPersonName"
                android:background="@drawable/edit_text_style"
                android:padding="10dp"
                />

            <TextView
                android:id="@+id/description_edit_info_profile_text_view"
                android:text="@string/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/description_edit_info_profile_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_surname"
                android:layout_marginTop="3dp"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorGray"
                android:background="@drawable/edit_text_style"
                android:padding="10dp"/>

            <Button
                android:id="@+id/save_profile_info_button"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:background="@drawable/gradient_main"
                android:layout_marginTop="18dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>

    </ScrollView>

    <RelativeLayout
    android:id="@+id/progressBarOverlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black"
    android:clickable="true"
    android:visibility="gone">

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminateDrawable="@mipmap/ic_launcher"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:theme="@android:style/Widget.ProgressBar.Large.Inverse"
        />
    </RelativeLayout>

</FrameLayout>